# Curso

./: LS2223_2022134096_2022134142_2022134114(2).rar  README.md  Tic.asm
At03TrabMNEDO_MartimAntunes_PedroFaneca/: Euler.asv  Euler.m  EulerM.m  Interface-MN.mlx  ODE45.m  PM.m  RK2.m  RK4.asv  RK4.m  Relatório-Atividade03.docx  appMaquinaPVI.mlapp
At04Trab_MNSED_MartimAntunes_PedroFaneca/: EulerMSED.m  EulerSED.m  MaquinaMNSED.mlapp  RK2SED.m  RK4SED.m  Relatório-Atividade04.docx
At05TrabMaquinaCDI_MartimAntunes_PedroFaneca/: DFCentradas_3.m  DFDerivada2_3.m  DFProgressivas_2.m  DFProgressivas_3.m  DFRegressivas_2.m  DFRegressivas_3.m  MaquinaCDI.mlapp  RSimpson.m  RTrapezios.m  Relatório-Atividade05.docx
IIA_TP2/: CMakeLists.txt  Resultados_Finais.xlsx  algoritmo.c  algoritmo.h  funcao.c  funcao.h  main.c  utils.c  utils.h
POO_TP/: Aparelho.cpp  CMakeLists.txt  Grupo.txt  Habitacao.cpp  Habitacao.h  Interacao.cpp  Interacao.h  Processador.cpp  Regra.cpp  Sensor.cpp  Sensor.h  Terminal.cpp  Zona.h  utils.h
POO_TP/Aparelhos/: Aquecedor.cpp  Aquecedor.h  Aspersor.cpp  Lampada.cpp  Lampada.h  Refrigerador.cpp
POO_TP/Propriedades/: Luz.h  Som.h  Temperatura.h
POO_TP/Regras/: Entre.cpp  Maior.cpp  Maior.h
Prog_PedroLinoNevesFaneca_2022134142/: linhas.c  linhas.h  linhas.txt  main.c
TP/: Aparelho.h  Processador.h  Propriedade.cpp  Propriedade.h  Regra.h  Terminal.h  Zona.cpp  main.cpp
TP/Aparelhos/: Aspersor.h  Refrigerador.h
TP_Gestão/: App(2).apk
TP_SO/: JogoUI.c  JogoUI.h  Makefile  grupo.txt  logs.txt  mapa1.txt  mapa2.txt  motor.c  motor.h
(+73 files in other folders)
